--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prisma": "^5.13.0",
     "tailwindcss": "^3",
     "typescript": "^5"
