--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "src",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.13.0",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18",
-    "three": "^0.164.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/three": "^0.164.0",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
-    "postcss": "^8",
-    "prettier": "^3.2.5",
-    "prettier-plugin-organize-imports": "^3.2.4",
-    "prisma": "^5.13.0",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+    "name": "src",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "prettier --write src"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.13.0",
+        "next": "13.5.6",
+        "react": "^18",
+        "react-dom": "^18",
+        "three": "^0.164.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/three": "^0.164.0",
+        "autoprefixer": "^10",
+        "eslint": "^8",
+        "eslint-config-next": "13.5.6",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-tailwindcss": "^3.15.1",
+        "postcss": "^8",
+        "prettier": "^3.2.5",
+        "prettier-plugin-organize-imports": "^3.2.4",
+        "prisma": "^5.13.0",
+        "tailwindcss": "^3",
+        "typescript": "^5"
+    }
 }
